--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,15 @@ plugins {
 group 'org.example'
 version '1.0-SNAPSHOT'
 
+test {
+    useJUnitPlatform()
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
